--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN || secrets.GITHUB_TOKEN }}
