--- a/pytest.ini
+++ b/pytest.ini
@@ -3,12 +3,10 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-asyncio_mode = auto
 addopts = -v --tb=short
-mock_modules = homeassistant
 
 [coverage:run]
-source = custom_components/ixcommand
+source = custom_components.ixcommand
 omit =
     */tests/*
     */conftest.py
