--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_test.txt
-          pip install aiohttp
+          pip install homeassistant
 
       - name: Run pytest
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           pytest --cov=custom_components.ixcommand --cov-report=xml tests/
 
@@ -71,7 +73,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mypy types-aiohttp
+          pip install mypy
 
       - name: Run mypy
         run: |
